--- a/parkinglotsimulator.html
+++ b/parkinglotsimulator.html
@@ -6,6 +6,7 @@
 	<script>
 		var simulator = (function(){	
 			var myParkingLot = null;
+			var intervalId = null;
 
 			// utility functions
 		 	var getRandomInt = function(min, max) {
@@ -37,7 +38,7 @@
 				this.park = function(indexOfSpace) {
 
 					// let's set a timeout so we can unpark the car after a specified time
-					window.setTimeout(function() {
+					window.setTimeout(function(indexOfSpace) {
 
 						// unpark the car
 						myParkingLot.spaces[indexOfSpace].carInSpace = null;
@@ -54,7 +55,7 @@
 				// let's create a new parking lot
 				myParkingLot = new ParkingLot(numberOfSpaces);
 
-				setInterval(function() {
+				intervalId = setInterval(function() {
 
 					// loop through parking lot spaces
 					for (i = 0; i < myParkingLot.spaces.length; i++){
@@ -77,9 +78,15 @@
 				}, 200);
 			}
 
+			var stop = function() {
+				if (intervalId != null)
+					window.clearInterval(intervalId);
+			}
+
 			return {
 				myParkingLot: myParkingLot,
-				run: run
+				run: run,
+				stop: stop
 			};
 		}());	
 	</script>
