--- a/parkinglotsimulator.html
+++ b/parkinglotsimulator.html
@@ -1,97 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Parking Lot Simulator</title>
-	<script>
-		var simulator = (function(){	
-			var myParkingLot = null;
-			var intervalId = null;
+    <meta charset="UTF-8">
+    <title>Parking Lot Simulator</title>
+    <script>
+    var ParkingLotSimulator = (function() {
+        var makes = ['ford', 'chevy', 'jeep', 'bmw', 'toyota', 'ferrari', 'lamborghini', 'bugatti', 'nissan', 'infiniti', 'buick', 'gmc', 'dodge', 'mazda', 'hyundai', 'cadillac', 'jaguar', 'mercedes benz', 'audi', 'tesla', 'subaru'];
+        var parkingLot = null;
+        var intervalId = null;
 
-			// utility functions
-		 	var getRandomInt = function(min, max) {
-			    return Math.floor(Math.random() * (max - min + 1)) + min;
-			}
+        // Utility functions
+        var getRandomInt = function(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min;
+        }
 
-			var getRandomArbitrary = function(min, max) {
-			    var result = Math.random() * (max - min) + min;
-			    return Math.round(result);
-			}
+        // Classes
+        var Space = function(position) {
+            this.position = position;
+            this.carInSpace = null;
+        }
 
-			// classes
-		 	var Space = function(position) {
-				this.position = position;
-				this.carInSpace = null;
-			}
+        var ParkingLot = function(numberOfSpaces) {
+            this.spaces = [];
+        }
 
-			var ParkingLot = function(numberOfSpaces) {
-				this.spaces = [];
+        var Car = function(make, timeInLot) {
+            this.timeInLot = timeInLot;
+            this.make = make;
+        }
 
-				for(i = 0; i < numberOfSpaces; i++){
-					this.spaces.push(new Space(i));
-				}
-			}
+        var parkCar = function(car, indexOfSpace, unParkCallback) {
+            console.log('Found an open space ' + i + ' for ', car);
+            parkingLot.spaces[i].carInSpace = car;
 
-			var Car = function(make, timeInLot) {
-				this.timeInLot = timeInLot;
-				this.make = make;
-				this.park = function(indexOfSpace) {
+            // let's set a timeout so we can unpark the car after a specified time
+            window.setTimeout(unParkCallback, car.timeInLot, indexOfSpace);
+        }
 
-					// let's set a timeout so we can unpark the car after a specified time
-					window.setTimeout(function(indexOfSpace) {
+        var unParkCar = function(indexOfSpace) {
+            // unpark the car
+            parkingLot.spaces[indexOfSpace].carInSpace = null;
+            console.log('Car just left parking space ' + indexOfSpace + '.');
+        }
 
-						// unpark the car
-						myParkingLot.spaces[indexOfSpace].carInSpace = null;
-						console.log('Car just left parking space ' + indexOfSpace + '.');
-						
-					}, this.timeInLot, indexOfSpace);
-				}
-			}
+        var createParkingLot = function(numberOfSpaces) {
+            parkingLot = new ParkingLot();
 
-			var run = function(numberOfSpaces) {
-				var timeInLot, randomMake, myCar;
-				var makes = ['ford','chevy','jeep','bmw','toyota', 'ferrari', 'lamborghini', 'bugatti', 'nissan', 'infiniti', 'buick', 'gmc', 'dodge', 'mazda', 'hyundai', 'cadillac', 'jaguar', 'mercedes benz', 'audi', 'tesla', 'subaru'];
-				
-				// let's create a new parking lot
-				myParkingLot = new ParkingLot(numberOfSpaces);
+            for (i = 0; i < numberOfSpaces; i++) {
+                parkingLot.spaces.push(new Space(i));
+            }
+        }
 
-				intervalId = setInterval(function() {
+        var createACar = function() {
+        	var timeInLot, randomMake, car;
 
-					// loop through parking lot spaces
-					for (i = 0; i < myParkingLot.spaces.length; i++){
+        	// let's create a car to park in the space
+            timeInLot = getRandomInt(1000, 60000);
+            randomMake = makes[getRandomInt(0, (makes.length - 1))];
+            return new Car(randomMake, timeInLot);
+        }
 
-						// see if there are any available space in the parking lot
-						if(myParkingLot.spaces[i].carInSpace == null){
+        var checkIfThereIsAnAvailableParkingSpace = function() {
+        	var car;
 
-							// let's create a car to park in the space
-							timeInLot = getRandomInt(1000, 60000);
-							randomMake = makes[getRandomArbitrary(0, (makes.length - 1))];
-							myCar = new Car(randomMake, timeInLot);
+        	// loop through parking lot spaces
+            for (i = 0; i < parkingLot.spaces.length; i++) {
 
-							// now, let's park the car
-							console.log('Found an open space ' + i + ' for ', myCar);
-							myParkingLot.spaces[i].carInSpace = myCar;
-							myCar.park(i);
-							break;
-						}
-					}
-				}, 200);
-			}
+                // see if there are any available space in the parking lot
+                if (parkingLot.spaces[i].carInSpace == null) {
 
-			var stop = function() {
-				if (intervalId != null)
-					window.clearInterval(intervalId);
-			}
+                    // create a car
+                    car = createACar();
 
-			return {
-				myParkingLot: myParkingLot,
-				run: run,
-				stop: stop
-			};
-		}());	
-	</script>
+                    // now, let's park the car
+                    parkCar(car, i, unParkCar);
+
+                    break;
+                }
+            }
+        }
+
+        var start = function(numberOfSpaces) {
+        	console.log("Simulator started.");
+
+        	console.log(numberOfSpaces);
+
+        	if (numberOfSpaces == undefined){
+        		console.error("You need to run Simulator.Start(); by passing in a number of cars to run. EX: Simulator.Start(10);");
+        	}
+
+            // let's create a new parking lot
+            createParkingLot(numberOfSpaces);
+
+			intervalId = setInterval(function() {
+            	checkIfThereIsAnAvailableParkingSpace(); 
+            }, 200);
+        }
+
+        var stop = function() {
+            if (intervalId != null)
+                window.clearInterval(intervalId);
+
+            console.log("Simulator stopped.");
+        }
+
+        return {
+            ParkingLot: parkingLot,
+            Start: start,
+            Stop: stop
+        };
+    }());
+    </script>
 </head>
+
 <body>
-	
 </body>
+
 </html>
