--- a/parkinglotsimulator.html
+++ b/parkinglotsimulator.html
@@ -6,6 +6,10 @@
     <title>Parking Lot Simulator</title>
     <script>
     var ParkingLotSimulator = (function() {
+    	"use strict"
+
+    	const TIMER_INTERVAL = 200
+
         var makes = ['ford', 'chevy', 'jeep', 'bmw', 'toyota', 'ferrari', 'lamborghini', 'bugatti', 'nissan', 'infiniti', 'buick', 'gmc', 'dodge', 'mazda', 'hyundai', 'cadillac', 'jaguar', 'mercedes benz', 'audi', 'tesla', 'subaru'];
         var parkingLot = null;
         var intervalId = null;
@@ -30,24 +34,24 @@
             this.make = make;
         }
 
-        var parkCar = function(car, indexOfSpace, unParkCallback) {
-            console.log('Found an open space ' + i + ' for ', car);
-            parkingLot.spaces[i].carInSpace = car;
+        var parkCar = function(car, indexOfSpace) {
+            console.log('Found an open space ' + indexOfSpace + ' for ', car);
+            parkingLot.spaces[indexOfSpace].carInSpace = car;
 
             // let's set a timeout so we can unpark the car after a specified time
-            window.setTimeout(unParkCallback, car.timeInLot, indexOfSpace);
+            window.setTimeout(unParkCar, car.timeInLot, indexOfSpace);
         }
 
         var unParkCar = function(indexOfSpace) {
             // unpark the car
-            parkingLot.spaces[indexOfSpace].carInSpace = null;
             console.log('Car just left parking space ' + indexOfSpace + '.');
+            parkingLot.spaces[indexOfSpace].carInSpace = null;
         }
 
         var createParkingLot = function(numberOfSpaces) {
             parkingLot = new ParkingLot();
 
-            for (i = 0; i < numberOfSpaces; i++) {
+            for (var i = 0; i < numberOfSpaces; i++) {
                 parkingLot.spaces.push(new Space(i));
             }
         }
@@ -58,6 +62,7 @@
         	// let's create a car to park in the space
             timeInLot = getRandomInt(1000, 60000);
             randomMake = makes[getRandomInt(0, (makes.length - 1))];
+
             return new Car(randomMake, timeInLot);
         }
 
@@ -65,7 +70,7 @@
         	var car;
 
         	// loop through parking lot spaces
-            for (i = 0; i < parkingLot.spaces.length; i++) {
+            for (var i = 0; i < parkingLot.spaces.length; i++) {
 
                 // see if there are any available space in the parking lot
                 if (parkingLot.spaces[i].carInSpace == null) {
@@ -74,7 +79,7 @@
                     car = createACar();
 
                     // now, let's park the car
-                    parkCar(car, i, unParkCar);
+                    parkCar(car, i);
 
                     break;
                 }
@@ -92,16 +97,17 @@
             createParkingLot(numberOfSpaces);
 
 			intervalId = setInterval(function() {
+
             	checkIfThereIsAnAvailableParkingSpace(); 
-            }, 200);
+
+            }, TIMER_INTERVAL);
         }
 
         var stop = function() {
-        	
-            if (intervalId != null)
-                window.clearInterval(intervalId);
+        	console.log("Simulator stopped.");
 
-            console.log("Simulator stopped.");
+            if (intervalId != null)
+                window.clearInterval(intervalId);            
         }
 
         return {
